# AheuiJIT

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  design.md  format.sh  publish-demo.sh  publish.sh
.github/workflows/: cli.yml
docs/: 404.html  index.html
docs/_next/static/-3Fv5dlszYjfjnWb_m1Ox/: _buildManifest.js
docs/_next/static/1_6sbwxqU8v0g9gna77fR/: _buildManifest.js
docs/_next/static/chunks/: 240.1fe8d0aa1f86ee3b.js  460.692d8d431d5436c1.js  6.29fefeac57dad7484807.js  9.2d6722ac045dc3f1aeea.js  9.6010fc3e010365d79296.js  9.9f2d85ee5dd949c1e964.js  9.f556a8a57821cecb0f32.js  amp.js  fec483df.b2da8e6924414b81.js  main-2f99c90b2f992a03.js  main-4b5a0a3381d0972d257b.js  main-54071235e8dea2ed4a6e.js  polyfills-4f4acd756cef4fe6da1b.js  webpack-1a7b16261090b7da6b32.js  webpack-24a9e01c32256931.js  webpack-3a177896b866b418d3f4.js  webpack-889d8db31567a11ffef5.js  webpack-9976f870b9a1953e8f5f.js  webpack-99cc3e62252d9934cb30.js  webpack-a3fce109555c57ec10a0.js  webpack.js
docs/_next/static/chunks/pages/: CodeRunner-ce32939d58869e017297.js  Config-092ea312900d6ab9cde6.js  Examples-e04848b905c2e8535dfe.js  _app-5011a890773b0e62.js  _app-90d467671b1c87f43711.js  _app-a8122c010e05a0a8802c.js  _app.js  _error-cfe217f44c3a166275c8.js  _error.js  index-86a0274075a2e812.js  index-c74f3e44c53d546ccbaa.js  index-f115c79a9557a919bf77.js  index.js
docs/_next/static/css/: 911c21a7145845a9.css
docs/_next/static/ctb6pe3hOqtdDnFpEW3n-/: _buildManifest.js
docs/_next/static/webpack/: 1.3f60b135f10b286d1f5d.hot-update.js  1.4388a26c100579fa270b.hot-update.js  1.4d97f974f2f42537388e.hot-update.js  1.6e737b25cbe94d534e39.hot-update.js  1.92a82c2f949446a84ce3.hot-update.js  1.a05da08d233837e6c6d6.hot-update.js  1.a63bb6ddc00f28a94871.hot-update.js  1.c85bb9b421f6cfb617de.hot-update.js  1.feb0f26e83ba97297842.hot-update.js  2.4e76cac08c1417f789be.hot-update.js  2.aab8d05e4f904f467c2b.hot-update.js  2.b603240e7efe3bc62557.hot-update.js  2.df8e08f51b28c828f20b.hot-update.js
docs/_next/static/webpack/pages/: _app.4d92f6df0ea10f3b39ce.hot-update.js  _app.58a326732ad02a579f0f.hot-update.js  _app.659334335fc73eff8921.hot-update.js  _app.78928679c78b8da7c3ce.hot-update.js  _app.b1a7b8d35651800fee27.hot-update.js  index.1752e6a6c1401cb58bf0.hot-update.js  index.2891969babca6e70525f.hot-update.js  index.291ef876e647242df898.hot-update.js  index.2c60e7162dc5a964cea5.hot-update.js  index.321bcb6b8ba87da9a195.hot-update.js  index.330889449f4192974500.hot-update.js  index.337a5e731387fdd1ef74.hot-update.js  index.38e2f9f3d598741f0d0a.hot-update.js  index.3947ebdcfbe6043560f8.hot-update.js  index.52144bc23bc8e70d87d1.hot-update.js  index.580949c1db1b31ccd09e.hot-update.js  index.5a4ee39687168c19c9ce.hot-update.js  index.6e9e2c3b5f548c34f848.hot-update.js  index.790c2235268cd9e27789.hot-update.js  index.7a1d6605ad7b3a70a5b1.hot-update.js  index.7c6ab01e3b72db81b586.hot-update.js  index.8c30bb61a9a891740214.hot-update.js  index.98e4aaa0cca8709f4c9a.hot-update.js  index.afdcc4d4b68f246bd09d.hot-update.js  index.bc5508b9529986fbfd9c.hot-update.js  index.c06e1c66c95548a29011.hot-update.js  index.c3b3563e8ae669fc2fd4.hot-update.js  index.c9f95ed0c52c721891ae.hot-update.js  index.cb9be1029f11ff31894c.hot-update.js  index.ccc03ef1ac5126533b4e.hot-update.js  index.d00cc57e20aa8187f7d1.hot-update.js  index.d8809c77f04872592782.hot-update.js  index.dbff594d2f65c02f1fab.hot-update.js  index.dcf845cd915a1a69b7d6.hot-update.js  index.e230a1abdb449a854179.hot-update.js  index.ee93a48d9e34904531b2.hot-update.js
src/AheuiJIT/: CMakeLists.txt
src/AheuiJIT/Android/: settings.gradle
src/AheuiJIT/Android/app/: build.gradle
src/AheuiJIT/Android/app/src/androidTest/java/kim/sunho/aheuijitdemo/: ExampleInstrumentedTest.kt
src/AheuiJIT/Android/app/src/main/: AndroidManifest.xml
src/AheuiJIT/Android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
src/AheuiJIT/Android/app/src/main/java/kim/sunho/aheuijitdemo/: MainActivity.kt
src/AheuiJIT/Android/app/src/main/res/values/: strings.xml  themes.xml
src/AheuiJIT/Android/app/src/main/res/values-night/: themes.xml
src/AheuiJIT/Android/app/src/test/java/kim/sunho/aheuijitdemo/: ExampleUnitTest.kt
src/AheuiJIT/Android/gradle/wrapper/: gradle-wrapper.properties
src/AheuiJIT/Cli/: CMakeLists.txt  main.cpp
src/AheuiJIT/IR/: BasicBlock.cpp  BasicBlock.h  Builder.cpp  Builder.h  Instruction.cpp  Instruction.h  Instruction.inc  InstructionVisitor.h  Location.cpp  Location.h  Storage.h  Value.cpp  Value.h
src/AheuiJIT/IR/Pass/: AggregatePushPopPass.cpp  ConstantFoldPass.cpp  EndpointPass.cpp  Pass.h
src/AheuiJIT/Runtime/: IOProtocol.cpp  IOProtocol.h  IRBuffer.h  Interpreter.cpp  Interpreter.h  JITContext.h  Machine.h  MachineFactory.cpp  MachineFactory.h  NativeMachine.h  Runtime.cpp  Runtime.h  RuntimeContext.h
src/AheuiJIT/Runtime/A64/: A64Machine.h
src/AheuiJIT/Runtime/Wasm/: WasmMachine.cpp  WasmMachine.h
src/AheuiJIT/Runtime/X86/: X86Machine.cpp  X86Machine.h
src/AheuiJIT/Sample/: CMakeLists.txt  main.cpp
src/AheuiJIT/Translator/: Decoder.cpp  Emitter.cpp  Emitter.h  RegAlloc.cpp  RegAlloc.h  Token.h  TokenOp.inc  Translator.cpp  Translator.h
src/AheuiJIT/Translator/A64/: A64Emitter.cpp  A64Emitter.h
src/AheuiJIT/Translator/Wasm/: WasmEmitter.cpp  WasmEmitter.h
src/AheuiJIT/Translator/X86/: X86Emitter.cpp  X86Emitter.h
src/AheuiJIT/Util/: Disasm.cpp  Disasm.h  Util.h
src/AheuiJIT/Wasm/: CMakeLists.txt  example.js  export.cpp  export.h  package.json  post.js  pre.js
tests/: 99.aheui  Makefile  gcm.aheui  soin.aheui
webdemo/: next.config.js  package-lock.json  package.json
webdemo/components/: CodeRunner.js  Config.js  Examples.js  samples.json
webdemo/pages/: _app.js  index.js
webdemo/styles/: App.css
